--- a/WebApplication1/WebApplication1/Views/Docente/Materias.cshtml
+++ b/WebApplication1/WebApplication1/Views/Docente/Materias.cshtml
@@ -25,13 +25,13 @@
         </div>
     }
 
-    <div class="card">
+    <div class="card shadow-sm">
         <div class="card-body p-0">
             <table class="table table-striped mb-0">
                 <thead class="table-light">
                     <tr>
                         <th>Nombre</th>
-                        <th>U.V.</th>
+                        <th style="width: 120px;">U.V.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -47,4 +47,3 @@
         </div>
     </div>
 </div>
-
